# X-Translator

./: README.md  README_zh.md  __init__.py  config.json  main.py  pyproject.toml  start.sh
backend/: __init__.py  app.py  asr_backends.py  config.py  logging_utils.py  services.py  session.py  speaker_prompt.py  visit_counter.py  zipformer_postprocess.py
frontend/: index.html  main.jsx  styles.css
server/: .gitignore
server/LMT/: start_lmt_vllm.sh
server/X-ASR/: setup.sh  start.sh
server/hunyuan_mt/: start_hunyuan_chimera_fp8.sh
server/qwen3asr/: qwen3asr_server.py  start.sh
server/xvoice/: server.py  start_x_voice.sh
