[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtranslate"
version = "0.1.0"
description = "Standalone simultaneous translation app"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.30,<1",
  "requests",
  "numpy>=1.24,<2",
  "soxr>=0.3,<1",
  "modelscope>=1.20",
  "funasr>=1.2",
  "packaging",
  "setuptools<81",
  "addict",
  "datasets>=2.18,<3",
  "pillow",
  "simplejson",
  "sortedcontainers",
  "websockets>=12,<16",
]

[tool.setuptools]
py-modules = []
